2008-10-21  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/batteries_core.ml: [ExtPervasives.Pervasives] replaced with [Extlib.Extpervasives.Pervasives]

	* Makefile: in [install], added [IO.cmi], [innerIO.cmi], [toolchain.cmi]
	
	* src/core/extlib.mlpack: [ExtPervasives] added

	* src/core/extlib/extUChar.mli: in [of_digit], fixed [@raise]

2008-10-20  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/batteries_core.ml: [Standard] now contains [ExtPervasives.Pervasives]

	* src/core/extlib/extPervasives.ml*: created

	* src/core/extlib/extFloat.mli: [fpclass] renamed [fpkind]

	* src/core/extlib/extBuffer.ml*: [enum], [of_enum] added

	* src/core/batteries_core.ml: [Buffer] is now [ExtBuffer.Buffer]

	* src/core/extlib/extBuffer.ml*: created

	* src/core/extlib/rope.ml*: [bulk_backwards], [of_bulk_backwards] removed

	* src/core/extlib/extString.ml: in [backwards], [i] shifted by 1

	* src/core/extlib/ref.ml: [pre_decr], [post_decr] now add [-1]

	* src/core/extlib/enum.ml: [print] now uses [print_a] to print the contents of the enumeration

	* src/core/extlib/extUChar.ml: [is_lowercase] now uses [`Ll]

2008-10-18  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/rope.ml*: [enum] rewritten with [Enum.delay]
	

	* src/core/extlib/rope.ml*: [backwards], [of_backwards], [bulk_enum], [of_bulk_enum], [bulk_backwards], [of_bulk_backwards], [of_char] added

	* src/core/extlib/enum.ml*: [delay] added

	* src/core/extlib/rope.ml*: [bulk_fold] added

	* src/core/extlib/charParser.ml: [parse_string] becomes [parse]

	* src/core/extlib/charParser.ml: [case_string] now uses [case_char]

	* src/core/extlib/extUTF8.ml: [adopt] added

	* src/core/extlib/extUTF8.mli: [string_as], [as_string] removed

	* src/core/extlib/rope.ml: [of_string_unsafe] replaces [string_as]

	* src/core/extlib/extUTF8.ml: [of_enum] now uses [validate]

	* src/core/extlib/extUTF8.ml: [backwards], [of_backwards] added
