@@ -4,19 +4,14 @@ Batlib_Baselib_Printexc
 Batlib_Baselib_Nativeint
 Batlib_Baselib_Map
 Batlib_Baselib_ListLabels
-Batlib_Baselib_Int64
-Batlib_Baselib_Int32
 Batlib_Baselib_Filename
 Batlib_Baselib_Char
 Batlib_Baselib_Callback
 Batlib_Baselib_ArrayLabels
 Batlib_Baselib_Arg
-Batlib_Baselib_Big_int
 Batlib_Baselib_Bigarray
-Batlib_Baselib_Buffer
 Batlib_Baselib_CamlinternalMod
 Batlib_Baselib_CamlinternalOO
-Batlib_Baselib_Complex
 Batlib_Baselib_Digest
 Batlib_Baselib_Format
 Batlib_Baselib_Gc
@@ -26,19 +21,16 @@ Batlib_Baselib_Lazy
 Batlib_Baselib_Lexing
 Batlib_Baselib_MapLabels
 Batlib_Baselib_Marshal
-Batlib_Baselib_Num
 Batlib_Baselib_Obj
 Batlib_Baselib_Oo
 Batlib_Baselib_Parsing
 Batlib_Baselib_Pervasives
-Batlib_Baselib_Printf
 Batlib_Baselib_Queue
 Batlib_Baselib_Random
 Batlib_Baselib_Scanf
 Batlib_Baselib_SetLabels
 Batlib_Baselib_Stack
 Batlib_Baselib_Str
-Batlib_Baselib_Stream
 Batlib_Baselib_Sys
 Batlib_Baselib_Unix
 Batlib_Baselib_UnixLabels
